--- a/diary/0501.md
+++ b/diary/0501.md
@@ -1,7 +1,6 @@
 
-```
 上課1
-
+```
 
 #include<iostream>
 using namespace std;
@@ -17,7 +16,7 @@ int main()
 
 
 ```
-![image](CPP/pic1.PNG)
+![image](https://github.com/s0970755289/CPP/blob/master/diary/pic.PNG)
 ```
 
 
