--- a/diary/0501.md
+++ b/diary/0501.md
@@ -17,9 +17,19 @@ int main()
 
 ```
 ![image](https://github.com/s0970755289/CPP/blob/master/diary/pic.PNG)
+
+上課2
 ```
 
+#include<iostream>
+using namespace std;
+int main()
+{
+	string s1("Welcome");
+  s1.append(" to CPP"); 
+  cout << s1 << endl; 
+}
 
-
-
-
+```
+![image](https://github.com/s0970755289/CPP/blob/master/diary/pic2.PNG)
+```
