--- a/diary/0501.md
+++ b/diary/0501.md
@@ -20,16 +20,28 @@ int main()
 
 上課2
 ```
-
 #include<iostream>
 using namespace std;
 int main()
 {
 	string s1("Welcome");
-  s1.append(" to CPP"); 
-  cout << s1 << endl; 
-}
+  s1.append(" to CPP"); //建立s1物件 Welcome附加字串 to CPP
+  cout << s1 << endl; // 印出s1 
 
+  string s2("Welcome");
+    s2.append(" to C and Cpp", 3, 6); //建立s2物件 Welcome附加字串 to C and Cpp 第3到第6個字 
+  cout << s2 << endl; // 印出s2 
+
+  string s3("Welcome");
+    s3.append(" to C and Cpp", 7); //建立s3物件 Welcome附加字串 to C and Cpp 到第7個字 
+  cout << s3 << endl;  // 印出s3 
+
+  string s4("Welcome"); 
+    s4.append(14, 'F'); //建立s3物件 Welcome附加字串 14個F 
+  cout << s4 << endl;  // 印出s4 
+  
+  return 0;
+}
 ```
-![image](https://github.com/s0970755289/CPP/blob/master/diary/pic2.PNG)
+![image](https://github.com/s0970755289/CPP/blob/master/diary/pic1%20(2).PNG)
 ```
