--- a/diary/0501.md
+++ b/diary/0501.md
@@ -45,3 +45,28 @@ int main()
 ```
 ![image](https://github.com/s0970755289/CPP/blob/master/diary/pic1%20(2).PNG)
 ```
+
+上課3
+
+#include<iostream>
+using namespace std;
+int main()
+{
+string NUMBER;
+string NAME;
+cout << "請輸入學號: ";
+cin>>NUMBER;
+cout << "請輸入姓名: ";
+cin>>NAME;
+getline(cin, NUMBER, '\n');
+getline(cin, NAME, '\n');
+cout << "你的學號 " << NUMBER << endl;
+cout << "你的姓名 " << NAME << endl;
+
+return 0;
+} 
+```
+![image](https://github.com/s0970755289/CPP/blob/master/diary/pic1%20(2).PNG)
+```
+
+
