--- a/diary/0501.md
+++ b/diary/0501.md
@@ -66,7 +66,7 @@ cout << "你的姓名 " << NAME << endl;
 return 0;
 } 
 ```
-![image](https://github.com/s0970755289/CPP/blob/master/diary/pic1%20(2).PNG)
+![image](https://github.com/s0970755289/CPP/blob/master/diary/%E4%BD%9C%E6%A5%AD.PNG)
 ```
 
 
