--- a/diary/0508.md
+++ b/diary/0508.md
@@ -28,8 +28,28 @@ return 0;
 
 上課2
 ```
+#include <iostream>
+using namespace std;
 
+int main()
+{
+string s1("Welcome");
+s1.assign(" to CPP"); 
+cout << s1 << endl; 
+string s2("Welcome");
+s2.assign(" to C and Cpp", 2, 8); 
+cout << s2 << endl;
+string s3("Welcome");
+s3.assign(" to C and Cpp", 9); 
+cout << s3 << endl; 
+string s4("Welcome"); 
+s4.assign(20, 'F'); 
+cout << s4 << endl; 
 
+return 0;
+}
+```
+![image](https://github.com/s0970755289/CPP/blob/master/diary/%E9%A1%9E%E5%88%A5%E7%89%A9%E4%BB%B62.PNG)
 
 
 
