--- a/diary/0508.md
+++ b/diary/0508.md
@@ -51,10 +51,37 @@ return 0;
 ```
 ![image](https://github.com/s0970755289/CPP/blob/master/diary/%E9%A1%9E%E5%88%A5%E7%89%A9%E4%BB%B62.PNG)
 
-
-
-
-
+上課3
+```
+#include <iostream>
+using namespace std;
+void ShowMessage(); //函式宣告語句
+void ShowAge(); //函式宣告語句
+void ShowIndex(); //函式宣告語句
+int main()
+{
+	ShowMessage(); //函式呼叫語句
+	ShowAge(); //函式呼叫語句
+	ShowIndex(); //函式呼叫語句
+	
+	return 0;
+}
+void ShowMessage()
+{
+	cout << "Hello我是黃羽雍!" << endl;
+}
+void ShowAge()
+{
+	int iAge=19;
+	cout << "年齡是 :" << iAge << endl;
+}
+void ShowIndex()
+{
+	
+	cout << "住在台南" << endl;
+}
+```
+![image](https://github.com/s0970755289/CPP/blob/master/diary/%E7%89%A9%E4%BB%B6%E9%A1%9E%E5%88%A53.PNG)
 
 
 
