--- a/diary/0508.md
+++ b/diary/0508.md
@@ -82,10 +82,33 @@ void ShowIndex()
 }
 ```
 ![image](https://github.com/s0970755289/CPP/blob/master/diary/%E7%89%A9%E4%BB%B6%E9%A1%9E%E5%88%A53.PNG)
+上課 4
+```
+#include <iostream>
+#include <fstream>
+using namespace std;
+
+int main()
+{
+  ofstream output;
+
+ 
+  output.open("成績.txt");
 
 
+  output << "邪神" << " " << "羽" << " " << "馬眼" 
+    << " " << 90 << endl;
+  output << "馬" << " " << "眼" << " " << "哥" 
+    << " " << 85 << endl;
 
+  output.close();
 
+  cout << "Done" << endl;
+
+  return 0;
+}
+```
+![image](https://github.com/s0970755289/CPP/blob/master/diary/%E6%AA%94%E6%A1%88%E8%BC%B8%E5%85%A5.PNG)
 
 
 
