--- a/diary/0508.md
+++ b/diary/0508.md
@@ -110,11 +110,38 @@ int main()
 ```
 ![image](https://github.com/s0970755289/CPP/blob/master/diary/%E6%AA%94%E6%A1%88%E8%BC%B8%E5%85%A5.PNG)
 
+上課5
+```
+#include <iostream>
+#include <fstream>
+#include <string>
+using namespace std;
 
+int main()
+{
+  ifstream input("成績.txt");
 
+  // Read data
+  string firstName;
+  string mi;
+  string lastName;
+  int score;
+  input >> firstName >> mi >> lastName >> score;
+  cout << firstName << " " << mi << " " << lastName << " "
+    << score << endl;
 
+  input >> firstName >> mi >> lastName >> score;
+  cout << firstName << " " << mi << " " << lastName << " "
+    << score << endl;
 
+  input.close();
 
+  cout << "Done" << endl;
+
+  return 0;
+}
+```
+![image](https://github.com/s0970755289/CPP/blob/master/diary/%E6%AA%94%E6%A1%88%E8%BC%B8%E5%87%BA.PNG)
 
 
 
