--- a/diary/0529.md
+++ b/diary/0529.md
@@ -1,4 +1,4 @@
-
+上課1
 
 定義 ==> StackOfIntegers.h
 
@@ -50,12 +50,12 @@ void StackOfIntegers::push(int value)    // 資料丟進去的函數的實作
 
 int StackOfIntegers::pop()        // 出最上層的資料的函數的實作 
 {
-  return elements[--size];              // 
+  return elements[--size];              // 從最上層的數一一取出
 }
 
 int StackOfIntegers::getSize() const       // 取的堆疊的大小的函數的實作 
 {
-  return size;                           // 
+  return size;                           // 回傳數的大小
 }
 ```
 使用==>TestStackOfIntegers.cpp
