--- a/diary/0529.md
+++ b/diary/0529.md
@@ -40,12 +40,12 @@ bool StackOfIntegers::isEmpty() const  //測試是否為空的函數 的實作
 
 int StackOfIntegers::peek() const      //出最上面元素的函數的實作 
 {
-  return elements[size - 1];           // 從最上面的數取出 
+  return elements[size - 1];           // 把最上面的數回傳 
 }
 
 void StackOfIntegers::push(int value)    // 資料丟進去的函數的實作 
 {
-  elements[size++] = value;            // 把value丟進size++ 
+  elements[size++] = value;            // 把資料丟進
 }
 
 int StackOfIntegers::pop()        // 出最上層的資料的函數的實作 
@@ -77,7 +77,7 @@ int main()
   return 0;
 }
 ```
-
+![image](https://github.com/s0970755289/CPP/blob/master/diary/%E5%A0%86%E8%B7%8C%E9%A1%9E%E5%88%A5.png)
 
 
 
