--- a/diary/0529.md
+++ b/diary/0529.md
@@ -45,7 +45,7 @@ int StackOfIntegers::peek() const      //出最上面元素的函數的實作
 
 void StackOfIntegers::push(int value)    // 資料丟進去的函數的實作 
 {
-  elements[size++] = value;            // 把資料丟進
+  elements[size++] = value;            // 把最上面的數遞增加一丟進
 }
 
 int StackOfIntegers::pop()        // 出最上層的資料的函數的實作 
