--- a/diary/0612.md
+++ b/diary/0612.md
@@ -1,1 +1,132 @@
+ 
+                                            上課1
+```
+#include <iostream>
+#include <fstream>
+using namespace std;
+
+int main()
+{
+  ofstream output;
+
+ // Create a file
+ // output.open("d:///scores.txt");
+ 
+ output.open("d:///A060Q119.txt");
+ 
+ //output.open("scores.txt");
+
+  // Write lines
+  output << "John" << " " << "T" << " " << "Smith" 
+    << " " << 90 << endl;
+  output << "Eric" << " " << "K" << " " << "Jones" 
+    << " " << 85 << endl;
+  output << "天王" << " " << "G" << " " << "大大" 
+    << " " << 95 << endl;
+    
+  output.close();
+
+  cout << "Done" << endl;
+
+  return 0;
+}
+```
+![image](https://github.com/s0970755289/CPP/blob/master/diary/0612(1).PNG)
+                                                  上課2
+```
+#include <iostream>
+#include <fstream>
+#include <string>
+using namespace std;
+
+int main()
+{
+  ifstream input("d:///A060Q119.txt");
+
+  // Read data
+  string firstName;
+  char mi;
+  string lastName;
+  int score;
+  
+  input >> firstName >> mi >> lastName >> score;
+  cout << firstName << " " << mi << " " << lastName << " "
+    << score << endl;
+
+  input >> firstName >> mi >> lastName >> score;
+  cout << firstName << " " << mi << " " << lastName << " "
+    << score << endl;
+    
+  input >> firstName >> mi >> lastName >> score;
+  cout << firstName << " " << mi << " " << lastName << " "
+    << score << endl;
+
+  input.close();
+
+  cout << "Done" << endl;
+
+  return 0;
+}
+```
+![image](https://github.com/s0970755289/CPP/blob/master/diary/0612(2).PNG)
+                                               上課3
+```
+#include <iostream>
+#include <fstream>
+using namespace std;
+
+int main()
+{
+  // Open a file
+  ifstream input("A060Q119.txt");
+  
+  // 檢查檔案是否存在==>使用fail()
+  if (input.fail())
+  {
+    cout << "File does not exist" << endl;
+    cout << "Exit program" << endl;
+    return 0;
+  }
+
+  double sum = 0;
+  double number;
+  
+  //參看課本不同做法與錯誤分析
+  while (input >> number) // Read data to the end of file
+  {
+    cout << number << " "; // Display data
+    sum += number;
+  }
+  //
+  input.close();
+
+  cout << "\nTotal is " << sum << endl;
+
+  return 0;
+}
+```
+![image](https://github.com/s0970755289/CPP/blob/master/diary/0612(3).PNG)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
